# docs-portal

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: cli.md  configuration.md  getting-started.md
examples/: docs-portal.example.toml  docs-portal.full-example.toml
src/docs_portal/: __init__.py  __main__.py  docs_portal.css
tests/: test_build.py  test_render.py  test_taxonomy.py
